@@ -4,6 +4,9 @@ Revision history for Perl distribution Test-Class-Moose
         * Removed the Test::Class::Moose::Report::Instance's error
           attribute. Contrary to the documentation, this attribute was never
           populated.
+        * Renamed Test::Class::Moose::Report::Method->instance_report method
+          to instance. This is a better match for other report-related
+          methods, which don't include a "_report" suffix.
 
 0.62 2015-08-30
         * Make Test::Class::Moose::Config load Test::Builder. It used this
